<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">传信鸽</string>
    <string name="shortcut_label_setting">设置</string>
    <string name="login_and_register">登录&amp;注册</string>
    <string name="country_code">国家/地区</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号码</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="mobile_unuse">手机号已经不再使用？</string>
    <string name="register_mobile">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="login_mobile">手机登陆</string>
    <string name="login_email">邮箱登陆</string>
    <string name="login_account">帐号登录</string>
    <string name="login_imei">设备号登录</string>
    <string name="email">邮箱</string>
    <string name="account">帐号</string>
    <string name="imei">设备号</string>
    <string name="language">语言</string>
    <string name="select_language">选择语言</string>
    <string name="language_type_first">中文简体</string>
    <string name="language_type_second">English</string>
    <string name="language_type_third">Indonesian</string>
    <string name="language_type_fourth">Português</string>
    <string name="language_type_fifth">Español</string>
    <string name="language_type_sixth">中文繁體</string>
    <string name="language_type_seventh">Tiếng Việt</string>
    <string name="language_type_eighth">日本語</string>
    <string name="language_type_ninth">русский язык</string>
    <string name="language_type_tenth">اللغة العربية</string>
    <string name="language_type_eleventh">Deutsch</string>
    <string name="language_type_twelfth">Français</string>
    <string name="server_address">服务器</string>
    <string name="select_server_address">选择服务器</string>
    <string name="server_address_east">东半球</string>
    <string name="server_address_west">西半球</string>
    <string name="country_server">地区</string>
    <string name="country_select_server">选择地区</string>
    <string name="country_cn">亚洲</string>
    <string name="country_en">美洲</string>
    <string name="country_asia">中国</string>
    <string name="country_europe">欧洲</string>
    <string name="country_asia_two">亚太</string>
    <string name="country_en_two">欧美</string>
    <string name="register">注册</string>
    <string name="parent_mobile_register">手机号注册</string>
    <string name="parent_mobile_register_prompt">请正确输入你的手机号码</string>
    <string name="register_protocol">已阅读并同意《用户服务协议》和《隐私保护政策》</string>
    <string name="read_and_agree">已阅读并同意</string>
    <string name="and">和</string>
    <string name="jion">加入</string>
    <string name="user_service_agreement">《用户服务协议》</string>
    <string name="privacy_protocol">《隐私保护政策》</string>
    <string name="user_experience">《用户体验改进计划》</string>
    <string name="verification_code">验证码</string>
    <string name="xui_count_down_finish" tools:ignore="PrivateResource">重新获取</string>
    <string name="verification_code_input">输入验证码</string>
    <string name="verification_code_prompt">请输入你收到的验证码</string>
    <string name="no_receive_verification_code">收不到验证码？</string>
    <string name="next_step">下一步</string>
    <string name="verification_code_to_max_prompt">发送验证码过于频繁，请1分钟后再试</string>
    <string name="set_pwd">设置登录密码</string>
    <string name="set_pwd_prompt">请设置6&#8211;16位字母和数字组合的密码</string>
    <string name="complete">完成</string>
    <string name="china">中国</string>
    <string name="china_mobile_code">+86</string>
    <string name="taiwan">台湾</string>
    <string name="taiwan_mobile_code">+886</string>
    <string name="country_code_often">常用地区</string>
    <string name="country_code_not_result">无结果</string>
    <string name="find_login_pwd">找回登录密码</string>
    <string name="find_pwd_mobile_prompt">请输入你注册时用的手机号码</string>
    <string name="find_pwd_email_prompt">请输入你注册时用的邮箱</string>
    <string name="find_pwd_email">邮箱找回</string>
    <string name="find_pwd_mobile">手机找回</string>
    <string name="find_pwd_prompt_mobile_title">确认手机号</string>
    <string name="find_pwd_prompt_mobile_content">我们将发送短信验证码到这个号码：%s</string>
    <string name="find_pwd_prompt_email_title">确认邮箱</string>
    <string name="find_pwd_prompt_email_content">我们将发送验证码到这个邮箱：%s</string>
    <string name="reset_pwd">重置密码</string>
    <string name="reset_pwd_new">新密码</string>
    <string name="reset_pwd_confirm">确认密码</string>
    <string name="bind_device">绑定设备</string>
    <string name="bind_device_prompt">请找到设备绑定号后扫描绑定</string>
    <string name="not_found_device_bind_imei">未找到设备绑定号？</string>
    <string name="find_bind_imei">已找到绑定号</string>
    <string name="switch_account">切换账号</string>
    <string name="scan_qrcode">扫描设备二维码</string>
    <string name="album">相册</string>
    <string name="no_support_flash_light_prompt">设备不支持闪光灯</string>
    <string name="scan_qrcode_prompt">将设备二维码对准框内，即可扫描</string>
    <string name="try_input_imei_prompt">多次扫描不成功？试试输入绑定号</string>
    <string name="multiple_scan_error">多次扫描不成功？</string>
    <string name="try_input_imei">试试输入绑定号</string>
    <string name="scan_imei_result_prompt">扫描的结果不是设备的绑定号</string>
    <string name="scan_imei_none_prompt">设备未生成绑定码</string>
    <string name="input_imei">输入绑定号</string>
    <string name="input_imei_prompt">IMEI号是15至17个数字组合的字符串，请查看设备上的IMEI号</string>
    <string name="bind_imei">绑定号</string>
    <string name="not_found_imei">找不到输入的绑定号？</string>
    <string name="bind">绑定</string>
    <string name="input_imei_error_prompt">绑定码无效</string>
    <string name="bind_apply">绑定申请</string>
    <string name="bind_apply_prompt">请填写信息绑定设备</string>
    <string name="contact_name">称呼</string>
    <string name="send_apply">发送申请</string>
    <string name="wait_manager_confirm">等待管理员确认</string>
    <string name="wait_manager_confirm_prompt">你的申请信息已发送，正在等待管理员确认</string>
    <string name="bind_success">恭喜绑定成功</string>
    <string name="bind_success_prompt">你的申请已被接受，快去监护手表吧</string>
    <string name="entry_main_page">进入主页</string>
    <string name="bind_success_contacts_prompt">你尚未添加联系人，是否去添加？</string>
    <string name="chat">微聊</string>
    <string name="location">定位</string>
    <string name="find">发现</string>
    <string name="more">更多</string>
    <string name="manager_bind_content">是否同意%s申请成为手表监护人</string>
    <string name="video_call">视频通话</string>
    <string name="family_group_chat">家庭群聊</string>
    <string name="chat_to_baby">试试和宝贝聊天吧</string>
    <string name="chat_to_family">试试和家庭成员聊天吧</string>
    <string name="chat_new_message">收到新的微聊消息</string>
    <string name="chat_group_member">微聊成员</string>
    <string name="chat_group_member_prompt">绑定手表的家庭成员，会自动添加到微聊</string>
    <string name="chat_group_member_add">添加</string>
    <string name="clear_chat_group_message">清除聊天记录</string>
    <string name="profile_clean_group_chat_history">确定删除群聊天记录吗</string>
    <string name="new_product">新产品</string>
    <string name="charge_base">充电底座</string>
    <string name="watch_strap">表带</string>
    <string name="baby">宝贝</string>
    <string name="location_refresh">更新位置</string>
    <string name="google_map">谷歌地图</string>
    <string name="satellite">卫星</string>
    <string name="satellite_map">卫星地图</string>
    <string name="track">轨迹</string>
    <string name="find_child">找小孩</string>
    <string name="navi_track">历史轨迹</string>
    <string name="location_settings">定位设置</string>
    <string name="location_mode">定位模式</string>
    <string name="position_info">位置信息</string>
    <string name="accuracy_info">(精度%d米)</string>
    <string name="no_position_info">暂无位置信息</string>
    <string name="get_position_info">正在获取位置信息&#8230;</string>
    <string name="get_position_now">正在定位&#8230;</string>
    <string name="no_address_info">获取地址失败</string>
    <string name="please_wait">请稍后</string>
    <string name="location_mode_prompt">温馨提示：\n定位过程中，手表会根据当前设置的定位模式的频率进行定位，定位模式的时间越短，手表耗电会越快。</string>
    <string name="navi_track_no_data">没有轨迹记录</string>
    <string name="navi_track_query">正在查找轨迹记录&#8230;</string>
    <string name="navi_track_progress">进度</string>
    <string name="navi_track_speed">速度</string>
    <string name="navi_track_no_data_play">暂无轨迹可播放</string>
    <string name="location_type_prompt">由于您设置了省电模式，足迹记录有限，如需记录更多足迹可设置其他定位模式（会缩短续航时间）</string>
    <string name="msg_sos">宝贝拨打了紧急求救电话</string>
    <string name="msg_photo">宝贝使用拍照功能上传了一张照片，请及时查看</string>
    <string name="msg_call_record">宝贝刚跟%s通话</string>
    <string name="msg_update_version">手表已升至最新版本</string>
    <string name="msg_leave_fence">宝贝离开名字叫%s的电子围栏</string>
    <string name="msg_entry_fence">宝贝进入名字叫%s的电子围栏</string>
    <string name="msg_low_energy">宝贝电量低于%s%%，请及时充电</string>
    <string name="msg_shutdown">宝贝的手表已关机</string>
    <string name="msg_reserved_electric">宝贝进入预留电量模式，为了能在更长的时间内联系到孩子，该模式下仅能接听电话，及时充电后可恢复正常</string>
    <string name="msg_agree_bind">管理员同意了%s的绑定请求</string>
    <string name="msg_refuse_bind">管理员拒绝了%s的绑定请求</string>
    <string name="msg_request_bind">%s请求绑定你的设备</string>
    <string name="msg_unbind">%s已解绑设备</string>
    <string name="msg_manager_unbind">管理员已解绑全部设备</string>
    <string name="msg_transfer_manager">%s成为新管理员</string>
    <string name="msg_update_contancts">宝贝添加了新朋友</string>
    <string name="msg_wifi_success">\"%s\"Wi-Fi手表本地已连接成功</string>
    <string name="msg_wifi">手表添加的WiFi\"%s\"密码错误，请修改密码</string>
    <string name="msg_open_loss">%s开启手表挂失功能</string>
    <string name="msg_close_loss">%s关闭手表挂失功能</string>
    <string name="msg_pwd_unlock_success">手表使用挂失密码解锁成功</string>
    <string name="msg_pwd_unlock">手表使用挂失密码解锁失败</string>
    <string name="msg_step_target">设备已完成今日目标步数</string>
    <string name="msg_change_device_name">%s修改了设备信息</string>
    <string name="msg_health_data">上报健康数据</string>
    <string name="msg_health_data_test_fail">健康数据测量失败</string>
    <string name="msg_deivce_put_on">设备已佩戴上</string>
    <string name="msg_deivce_fall_off">设备已脱落</string>
    <string name="settings">设置</string>
    <string name="settings_close_prompt">关闭后消息接收时不会提醒你</string>
    <string name="watch_setting_change">手表设置变更</string>
    <string name="watch_electric">手表电量</string>
    <string name="entry_reserved_electric">进入预留电量</string>
    <string name="address_book_message">通讯录消息</string>
    <string name="sport">运动</string>
    <string name="sos">SOS</string>
    <string name="update_firmware">升级</string>
    <string name="upload_photo">上传图片</string>
    <string name="call_record_log">通话日志</string>
    <string name="common_location">常用地点</string>
    <string name="continue_unbind">继续解绑</string>
    <string name="unbind_title">解绑说明</string>
    <string name="unbind_device_prompt">解绑后手表将恢复未绑定状态，本地数据、相册等将会被清除。</string>
    <string name="account_hint">请输入帐号</string>
    <string name="imei_hint">请输入设备绑定号</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="select_all">全选</string>
    <string name="qrcode_scanner">扫描二维码</string>
    <string name="home">首页</string>
    <string name="map_center">即时地图</string>
    <string name="device_list">设备列表</string>
    <string name="number">编号</string>
    <string name="nickname">昵称</string>
    <string name="plumage_color">羽色</string>
    <string name="enter_number_of_pigeon">请输入鸽子编号</string>
    <string name="enter_nickname_of_pigeon">请输入鸽子昵称</string>
    <string name="enter_color_of_plumage">请输入羽色</string>
    <string name="create_pigeon_competition">创建比赛</string>
    <string name="competition_time">比赛时间</string>
    <string name="competition_name">比赛名称</string>
    <string name="competition_start_and_end_point">比赛的起点与终点</string>
    <string name="enter_the_name_of_competition_prompt">请输入比赛名称</string>
    <string name="start_point_longitude">起点经度</string>
    <string name="start_point_latitude">起点纬度</string>
    <string name="end_point_longitude">终点经度</string>
    <string name="end_point_latitude">终点纬度</string>
    <string name="my">我的</string>
    <string name="enter_password">请输入密码</string>
    <string name="no_unbind_permission">无解绑权限</string>
    <string name="tip_account_permission">账号权限</string>
</resources>