<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<!--底部导航栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_menu_home_fill"
        android:title="@string/home" />

    <item
        android:id="@+id/navLocation"
        android:icon="@drawable/ic_menu_monitor"
        android:title="@string/map_center" />

    <item
        android:id="@+id/navMenu"
        android:icon="@mipmap/ic_home_track"
        android:title="" />

    <item
        android:id="@+id/navList"
        android:icon="@drawable/ic_menu_device"
        android:title="@string/device_list" />

    <item
        android:id="@+id/navMore"
        android:icon="@drawable/ic_setting_fill"
        android:title="@string/my" />

</menu>
