<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/actionbar_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:maxLines="1"
        android:text="@string/unbind_title"
        android:textAppearance="@style/max_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvPrompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/unbind_device_prompt"
        android:textAppearance="@style/simple_dimgray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/unBindBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height_40"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_24"
        android:background="@drawable/btn_custom_red_selector"
        android:text="@string/continue_unbind"
        android:textColor="@color/white"
        android:textSize="@dimen/edit_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvPrompt"
        app:layout_constraintStart_toStartOf="@id/tvPrompt" />

</android.support.constraint.ConstraintLayout>